# test

./: README.md
.devcontainer/: devcontainer.json
assignment_1/: .env.example  README.md  pyproject.toml
assignment_1/src/solution/: __init__.py  agent.py  main.py  models.py  tools.py
assignment_1/tests/: conftest.py  test_agent.py
assignment_2/: .env.example  README.md  pyproject.toml
assignment_2/src/pharma_agent/: __init__.py
assignment_2/src/pharma_agent/agent/: __init__.py  base.py  tools.py  workflow.py
assignment_2/src/pharma_agent/evaluation/: __init__.py  evaluator.py  metrics.py
assignment_2/src/pharma_agent/retrieval/: __init__.py  embeddings.py  pipeline.py  store.py
assignment_2/tests/: conftest.py
assignment_2/tests/test_agent/: test_workflow.py
assignment_2/tests/test_evaluation/: test_metrics.py
assignment_2/tests/test_retrieval/: test_pipeline.py
