[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pharma-agent"
version = "0.1.0"
description = "PhnyX Lab — Assignment 2: Agentic RAG workflow for pharmaceutical AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM providers
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    # Orchestration
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.2.0",
    # RAG / retrieval
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
]
faiss = [
    # Alternative to chromadb — install instead if preferred
    "faiss-cpu>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pharma_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"
markers = [
    "integration: marks tests requiring real APIs or disk I/O (skip with -m 'not integration')",
    "slow: marks tests that take more than 5 seconds",
]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.isort]
known-first-party = ["pharma_agent"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["pharma_agent"]

[[tool.mypy.overrides]]
module = ["chromadb.*", "sentence_transformers.*", "faiss.*", "langchain.*", "langchain_openai.*", "langchain_anthropic.*", "langchain_community.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/pharma_agent/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
